--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/portfolio/style.css">
+    <link rel="stylesheet" href="/style.css">
 
 
 
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="header">
             <div class="name">
-                <img src="/portfolio/img/images-removebg-preview.png" width="30%">
+                <img src="/images-removebg-preview.png" width="30%">
             </div>
             <div id="Home" class="navbar">
                 <ul>
@@ -59,7 +59,7 @@
 
     <div id="about" class="about">
         <div class="image2">
-            <img src="/portfolio/img/amanImage.png " width="15%">
+            <img src="/amanImage.png " width="15%">
         </div>
         <div class="about_head">
             ABOUT
@@ -83,7 +83,7 @@
 
     <div id="project" class="project">
         <span id="project2">PROJECTS</span>
-        <div class="projectImage2"><img src="/portfolio/img/fitnessgym.png" width="60%" height="90%"></div>
+        <div class="projectImage2"><img src="/fitnessgym.png" width="60%" height="90%"></div>
         <div class="projectText">
             I made this gym website using basic html and css.
             <br>
@@ -96,11 +96,11 @@
 
         
         <div class="skill2">SKILLS</div>
-        <div class="skilllogo"><img class="html" src="/portfolio/img/icons8-html-144.png" width="80rem">
-            <img class="css" src="/portfolio/img/icons8-css-144.png" width="80rem">
-            <img class="c" src="/portfolio/img/icons8-c-144.png" width="80rem">
-            <img class="c2" src="/portfolio/img/icons8-c-144 (1).png" width="80rem">
-            <img class="js" src="/portfolio/img/icons8-javascript-144.png" width="80rem">
+        <div class="skilllogo"><img class="html" src="/icons8-html-144.png" width="80rem">
+            <img class="css" src="/icons8-css-144.png" width="80rem">
+            <img class="c" src="/icons8-c-144.png" width="80rem">
+            <img class="c2" src="/icons8-c-144 (1).png" width="80rem">
+            <img class="js" src="/icons8-javascript-144.png" width="80rem">
         </div>
         
 
