--- a/index.html
+++ b/index.html
@@ -5,19 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aman Verma portfolio</title>
-    <link rel="icon" href="/img/images-removebg-preview.png">
-    <link rel="stylesheet" href="/style.css">
-
-
-
+    <link rel="icon" href="/portfolio/img/images-removebg-preview.png">
+    <link rel="stylesheet" href="/portfolio/style.css">
 </head>
 
 <body>
     <div class="container">
         <div class="header">
-            <div class="name">
-                <img src="/img/images-removebg-preview.png" width="30%">
-            </div>
+            <span class="name">
+                <img src="/portfolio/img/images-removebg-preview.png" width="30%">
+            </span>
             <div id="Home" class="navbar">
                 <ul>
                     <li><a href="#container2">Home</a></li>
@@ -45,13 +42,13 @@
                 <span class="social">I am open for new opportunities</span>
                 <div class="imgSocial">
                     <a href="https://www.instagram.com/aman.verma2710/" target="_blank"><img
-                            src="https://img.icons8.com/?size=80&id=TEYr8ETaIfBJ&format=png" width="13%"></a>
+                            src="https://img.icons8.com/?size=48&id=Xy10Jcu1L2Su&format=png" width="13%"></a>
                     <a href="https://github.com/AMANverma9118" target="_blank"><img
-                            src="https://img.icons8.com/?size=80&id=118553&format=png" width="13%"></a>
+                            src="https://img.icons8.com/?size=60&id=0tREDFkScvsm&format=png" width="13%"></a>
                     <a href="https://www.linkedin.com/in/aman-verma-527537272/" target="_blank"><img
-                            src="https://img.icons8.com/?size=80&id=108812&format=png" width="13%"></a>
+                            src="https://img.icons8.com/?size=48&id=13930&format=png" width="13%"></a>
                     <a href="https://www.codechef.com/users/jarvis9118" target="_blank"><img
-                            src="https://img.icons8.com/?size=80&id=Wq4dyyhFKRz6&format=png" width="13%"></a>
+                            src="https://img.icons8.com/?size=80&id=eqDiO9L02aEu&format=png" width="13%"></a>
                 </div>
             </div>
 
@@ -59,32 +56,34 @@
     </div>
 
     <div id="about" class="about">
-        <div class="image2">
-            <img src="/img/amanImage.png " width="15%">
-        </div>
         <div class="about_head">
             ABOUT
         </div>
+        <div class="image2">
+            <img src="/portfolio/img/amanImage.png " width="15%">
+        </div>
+
         <br>
         <div class="about_content">
-            <p id="p1">Hello, I'm Aman Verma, and I'm thrilled to welcome you to my portfolio. I am from varanasi. I
-                always been
-                passionate about learning </p>
-            <p id="p2">
-                new things. I am proud to have been a Developer of team Conatus. Additionally I work
-                hard to achieve my goal and do my best</p>
-            <p id="p3"> towards my work It's a reflection of the multi-faceted person I
-                am, and I bring this perspective into everything I create.</p>
-            <p id="p4"> Looking ahead, I'm
-                excited about learning new things Thank you for visiting my portfolio.</p>
+            Hello, I'm Aman Verma, and I'm thrilled to welcome you to my portfolio. I am from varanasi. I
+            always
+            <br>
+            passionate about learning
+
+            new things. I am proud to have been a Developer of team Conatus. <br> Additionally I work
+            hard to achieve my goal.
+
+            Looking ahead, I'm
+            excited about learning new things.
+            <br> Thank you for visiting my portfolio.
 
         </div>
     </div>
 
 
     <div id="project" class="project">
-        <span id="project2">PROJECTS</span>
-        <div class="projectImage2"><img src="/img/fitnessgym.png" width="60%" height="90%"></div>
+        <div id="project2">PROJECTS</div>
+        <div class="projectImage2"><img src="/portfolio/img/fitnessgym.png" width="60%" height="90%"></div>
         <div class="projectText">
             I made this gym website using basic html and css.
             <br>
@@ -97,11 +96,11 @@
 
 
         <div class="skill2">SKILLS</div>
-        <div class="skilllogo"><img class="html" src="/img/icons8-html-144.png" width="80rem">
-            <img class="css" src="/img/icons8-css-144.png" width="80rem">
-            <img class="c" src="/img/icons8-c-144.png" width="80rem">
-            <img class="c2" src="/img/icons8-c-144 (1).png" width="80rem">
-            <img class="js" src="/img/icons8-javascript-144.png" width="80rem">
+        <div class="skilllogo"><img class="html" src="/portfolio/img/icons8-html-144.png" width="80rem">
+            <img class="css" src="/portfolio/img/icons8-css-144.png" width="80rem">
+            <img class="c" src="/portfolio/img/icons8-c-144.png" width="80rem">
+            <img class="c2" src="/portfolio/img/icons8-c-144 (1).png" width="80rem">
+            <img class="js" src="/portfolio/img/icons8-javascript-144.png" width="80rem">
         </div>
 
 
@@ -109,7 +108,7 @@
 
     <div id="contact" class="contact">
         <div class="contactText">
-            CONTACT ME
+            <span id="con1"> CONTACT &nbsp;</span> ME
         </div>
         <div class="contact2">
 
