--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aman Verma portfolio</title>
-    <link rel="icon" href="/portfolio/img/images-removebg-preview.png">
-    <link rel="stylesheet" href="/portfolio/style.css">
+    <link rel="icon" href="/img/images-removebg-preview.png">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
     <div class="container">
         <div class="header">
             <span class="name">
-                <img src="/portfolio/img/images-removebg-preview.png" width="30%">
+                <img src="/img/images-removebg-preview.png" width="30%">
             </span>
             <div id="Home" class="navbar">
                 <ul>
@@ -60,7 +60,7 @@
             ABOUT
         </div>
         <div class="image2">
-            <img src="/portfolio/img/amanImage.png " width="15%">
+            <img src="/img/amanImage.png " width="15%">
         </div>
 
         <br>
@@ -83,7 +83,7 @@
 
     <div id="project" class="project">
         <div id="project2">PROJECTS</div>
-        <div class="projectImage2"><img src="/portfolio/img/fitnessgym.png" width="60%" height="90%"></div>
+        <div class="projectImage2"><img src="/img/fitnessgym.png" width="60%" height="90%"></div>
         <div class="projectText">
             I made this gym website using basic html and css.
             <br>
@@ -96,11 +96,11 @@
 
 
         <div class="skill2">SKILLS</div>
-        <div class="skilllogo"><img class="html" src="/portfolio/img/icons8-html-144.png" width="80rem">
-            <img class="css" src="/portfolio/img/icons8-css-144.png" width="80rem">
-            <img class="c" src="/portfolio/img/icons8-c-144.png" width="80rem">
-            <img class="c2" src="/portfolio/img/icons8-c-144 (1).png" width="80rem">
-            <img class="js" src="/portfolio/img/icons8-javascript-144.png" width="80rem">
+        <div class="skilllogo"><img class="html" src="/img/icons8-html-144.png" width="80rem">
+            <img class="css" src="/img/icons8-css-144.png" width="80rem">
+            <img class="c" src="/img/icons8-c-144.png" width="80rem">
+            <img class="c2" src="/img/icons8-c-144 (1).png" width="80rem">
+            <img class="js" src="/img/icons8-javascript-144.png" width="80rem">
         </div>
 
 
