--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <div class="text">
                 Hi, <br>I'm <span class="name2"> Aman Verma</span>
                 <br>
-                <span class="text2">
-                    Web Developer
-                </span>
+                <span id="text2">
+                   
+                </span><span id="cursor">|</span>
                 <br>
                 <span class="text3">
 
@@ -138,6 +138,7 @@
 
     </div>
 
+    <script src="/javascript.js"></script>
 </body>
 
 </html>
