--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
     </div>
 
-    <script src="/portfolio/javascript.js"></script>
+    <script src="/javascript.js"></script>
 </body>
 
 </html>
