--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="header">
             <span class="name">
-                <img src="/img/images-removebg-preview.png" width="30%">
+                <a href="#container2"><img src="/img/images-removebg-preview.png" width="30%"></a>
             </span>
             <div id="Home" class="navbar">
                 <ul>
